# literate-docs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  demo.md  demo2.md  test.md
src/: execute_code_blocks.rs  extract_code_blocks.rs  fill_output_blocks.rs  lib.rs  literate_docs.rs  main.rs  output_node.rs  parse_markdown.rs  render_markdown.rs  stream_execute.rs  with_output_nodes.rs
src/execute_code_blocks/: default_language_config.rs  language_config.rs  mod.rs  streaming_execution.rs  sync_execution.rs
src/tui/: mod.rs  output_box.rs  render.rs  scroll.rs  tests.rs
