[package]
name = "literate-docs"
version = "0.1.0"
edition = "2021"
description = "Literate programming tool that executes code blocks in markdown"
license = "MIT"
repository = "https://github.com/split/literate-docs"

[dependencies]
markdown = "1.0"
mdast_util_to_markdown = "0.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
similar = "2.6"
futures = "0.3"

[[bin]]
name = "literate-docs"
path = "src/main.rs"

[lib]
name = "literate_docs"
path = "src/lib.rs"